<resources>
    <string name="app_name">RecipeShare</string>
    <string name="recipe_share">Recipe Share</string>
    <string name="please_sign_in">Please Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_user">Welcome %s!</string>
    <string name="explore_recipes">Explore Recipes</string>
    <string name="my_recipes">My Recipes</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="admin">Admin</string>
    <string name="please_sign_up">Please Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="explore_recipes_title">Explore Recipes</string>
    <string name="back">Back</string>
    <string name="my_recipes_title">My Recipes</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="favorite_recipes_title">Favorite Recipes</string>
    <string name="admin_tools">Admin Tools</string>
    <string name="add_recipes">Add Recipes</string>
    <string name="ingredients">Ingredients:</string>
    <string name="enter_ingredients">Enter Ingredients</string>
    <string name="enter_instructions">Enter Instructions</string>
    <string name="instructions">Instructions:</string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter Name</string>
    <string name="created_by">Created By:</string>
    <string name="enter_username">Enter Username</string>
    <string name="add_recipe_submit">Add Recipe</string>
    <string name="preference_file_key">recipeSharePreferenceFileKey</string>
    <string name="preference_userID_key">recipeSharePreferenceUserIDKey</string>
    <string name="list_of_recipes">List of Recipes</string>
    <string name="createdBystring">%s</string>
    <string name="delete_accounts">Delete Accounts</string>
    <string name="delete_recipes">Delete Recipes</string>
    <string name="view_feedback">View Feedback</string>
    <string name="delete_accounts1">Delete Accounts</string>
    <string name="userid">UserID:</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="delete">Delete</string>
    <string name="delete_recipes1">Delete Recipes</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="enter_recipe_name">Enter Recipe Name</string>
    <string name="no_recipes_time_to_get_cooking">No recipes! Time to get cooking!</string>
</resources>