<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeUser"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/welcome_user"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exploreRecipesButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:onClick="TEST_GOES_TO_EXPLORE_RECIPES_PAGE_TEST"
        android:text="@string/explore_recipes"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeUser" />

    <Button
        android:id="@+id/myRecipesButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        android:onClick="TEST_GOES_TO_MY_RECIPES_PAGE_TEST"
        android:text="@string/my_recipes"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exploreRecipesButton" />

    <Button
        android:id="@+id/favoriteRecipesButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        android:onClick="TEST_GOES_TO_MY_RECIPES_PAGE_TEST"
        android:text="@string/favorite_recipes"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myRecipesButton" />

    <Button
        android:id="@+id/AdminButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        android:onClick="TEST_GOES_TO_ADMIN_PAGE_TEST"
        android:text="@string/admin"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favoriteRecipesButton"
        />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:onClick="TEST_GOES_TO_LOGIN_PAGE_TEST"
        android:text="@string/logout"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteAccountButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="668dp"
        android:onClick="TEST_GOES_TO_LOGIN_PAGE_TEST"
        android:text="@string/delete_account"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>