<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminPage">

    <TextView
        android:id="@+id/adminPageTitle"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/admin_tools"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButtonAdminPage"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteAccountsButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="52dp"
        android:text="@string/delete_accounts"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adminPageTitle" />

    <Button
        android:id="@+id/deleteRecipesButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="68dp"
        android:text="@string/delete_recipes"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteAccountsButton" />

    <Button
        android:id="@+id/viewFeedbackButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="68dp"
        android:text="@string/view_feedback"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteRecipesButton" />


</androidx.constraintlayout.widget.ConstraintLayout>