<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpPage">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/recipe_share"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUpString"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/please_sign_up"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <EditText
        android:id="@+id/signUpUsername"
        android:layout_width="275dip"
        android:layout_height="75dip"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text|textAutoComplete"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpString" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="275dip"
        android:layout_height="75dip"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="text|textAutoComplete|textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpUsername" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="84dp"
        android:onClick="TEST_GOES_TO_LANDING_PAGE_TEST"
        android:text="@string/create_account"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>