<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteRecipes">

    <TextView
        android:id="@+id/deleteRecipesTitle"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/delete_recipes1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deleteRecipesDisplay"
        android:layout_width="378dp"
        android:layout_height="359dp"
        android:layout_marginTop="36dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteRecipesTitle" />

    <Button
        android:id="@+id/backButtonDeleteRecipes"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deleteRecipesTextView"
        android:layout_width="132dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/recipe_name"
        android:textSize="23sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteRecipesDisplay" />

    <EditText
        android:id="@+id/deleteRecipesEditText"
        android:layout_width="235dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:inputType="textAutoCorrect"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/deleteRecipesTextView"
        app:layout_constraintStart_toEndOf="@id/deleteRecipesTextView"
        android:hint="@string/enter_recipe_name"
        />

    <Button
        android:id="@+id/deleteRecipesButton"
        android:layout_width="174dp"
        android:layout_height="68dp"
        android:layout_marginTop="56dp"
        android:text="@string/delete"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/deleteRecipesEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>